cmake_minimum_required(VERSION 3.1)
project(video_process)
find_package(OpenCV QUIET)
set(apriltag_DIR /usr/local/share/apriltag/cmake)
find_package(apriltag REQUIRED)
find_package(Eigen3 REQUIRED)
include_directories(${apriltag_INCLUDE_DIRS})
message(STATUS "apriltag_include dir:${apriltag_INCLUDE_DIR}")
message(STATUS "apriltag_dir:${apriltag_DIR}")
message(STATUS "apriltag_libs:${apriltag_LIBS}")
if(OpenCV_FOUND)
    add_executable(video_process main.cpp)
    target_link_libraries(video_process ${apriltag_LIBS} ${OpenCV_LIBRARIES})
    set_target_properties(video_process PROPERTIES CXX_STANDARD 14)
endif(OpenCV_FOUND)